--- a/assets/estilopag.css
+++ b/assets/estilopag.css
@@ -9,8 +9,15 @@
     --color-principal: rgb(248, 234, 239);
 }
 
+.imagem_1 {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    margin: 10px;
+}
+
 .topo img {
-    width: calc(100% - 10px);
+
     object-fit: cover;
     margin: 20px;
     border-radius: 14px;
