--- a/assets/estilopag.css
+++ b/assets/estilopag.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0px;
+}
+
 :root {
     --tamanho-minimo: 42px;
     --tamanho-médio: 20px;
@@ -22,7 +26,7 @@
 }
 
 img {
-    background-size: contain;
+    object-fit: cover;
     display: flex;
     justify-content: center;
     border-radius: 30px;
@@ -102,4 +106,15 @@ td {
 
 table {
     margin: var(--tamanho-médio);
+}
+
+@media 415px {
+    img {
+        object-fit: cover;
+        display: flex;
+        justify-content: center;
+        border-radius: 30px;
+        width: 100%;
+        height: 100%;
+    }
 }
